--- a/BookFriends/Views/Communities/Browse.cshtml
+++ b/BookFriends/Views/Communities/Browse.cshtml
@@ -7,6 +7,7 @@
 <div class="container">
     <h3>Browse Communities</h3>
     <input type="text" class="form-control" placeholder="Find a community.." aria-label="Find a community" aria-describedby="search-communities"/>
+    <p class="text-secondary">Showing @Model.Communities.Count of @Model.TotalCommunities communities</p>
     <ul>
         @foreach (var communityGroup in Model.Communities)
         {
