--- a/BookFriends/Views/Communities/Browse.cshtml
+++ b/BookFriends/Views/Communities/Browse.cshtml
@@ -2,30 +2,44 @@
 
 @{
     ViewData["Title"] = "Communities";
+
 }
 
-<div class="container">
-    <h3>Browse Communities</h3>
-    <input type="text" class="form-control" placeholder="Find a community.." aria-label="Find a community" aria-describedby="search-communities"/>
-    <p class="text-secondary">Showing @Model.Communities.Count of @Model.TotalCommunities communities</p>
-    <ul>
-        @foreach (var communityGroup in Model.Communities)
-        {
+    <div id="browse-communities" class="container">
+        <h3>Browse Communities</h3>
+        <input type="text" class="form-control" placeholder="Find a community.." aria-label="Find a community" aria-describedby="search-communities" />
+        <p class="text-secondary">Showing {{ communityListings.length }} of {{ totalCommunities }} communities</p>
+        <ul v-for="listing in communityListings">
             <li class="row mt-3 mb-3">
                 <div class="col-2 text-center">
-                    <img class="img-thumbnail bf-thumb" src="" />
+                    <img class="img-thumbnail bf-thumb" />
                 </div>
                 <div class="col-10">
-                    <a asp-controller="Community" asp-action="View" asp-route-id="@communityGroup.Id">
-                        <h5>@communityGroup.Name</h5>
+                    <a v-bind:href="'/Community/View/' + listing.id">
+                        <h5>{{ listing.name }}</h5>
                     </a>
-                    <span class="badge badge-info">@communityGroup.GetMemberCount() members</span>
-                    <p>@communityGroup.Description</p>
+                    <span class="badge badge-info">{{ listing.memberCount }} members</span>
+                    <p>{{ listing.description }}</p>
                 </div>
             </li>
-        }
-    </ul>
-</div>
-<div class="container text-center">
-    <button class="btn btn-success btn-sm">View More</button>
-</div>
+        </ul>
+        <div class="d-flex justify-content-center" v-if="displayLoadingSpinner">
+            <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+        <div class="container text-center" v-if="displayViewMoreButton">
+            <button class="btn btn-success btn-sm" v-on:click="loadMoreListings">View More</button>
+        </div>
+    </div>
+
+
+
+@section Scripts {
+    <script src="~/lib/vue/vue.global.prod.js"></script>
+    <script src="~/js/vm/communities-browse.js"></script>
+    <script>
+        vm.$data.communityListings = @Json.Serialize(Model.CommunityGroupDtos);
+        vm.$data.totalCommunities = @Model.TotalCommunities;
+    </script>
+}
