--- a/BookFriends/Views/Communities/Browse.cshtml
+++ b/BookFriends/Views/Communities/Browse.cshtml
@@ -15,15 +15,13 @@
             {{ listingsSummary }}
         </p>
         <ul>
-            <li class="row mt-3 mb-3" v-for="listing in listings">
-                <div class="col-2 text-center">
-                    <img class="img-thumbnail bf-thumb" />
-                </div>
-                <div class="col-10">
+            <li class="mt-3 mb-3 media" v-for="listing in listings">
+                <img class="bf-thumb bf-thumb-l img-thumbnail mr-4" src="~/img/icon-people.svg" alt="icon-people" />
+                <div class="media-body">
                     <a v-bind:href="'/Community/View/' + listing.id">
                         <h5>{{ listing.name }}</h5>
                     </a>
-                    <span class="badge badge-info">{{ listing.memberCount }} members</span>
+                    <span class="badge badge-primary">{{ listing.memberCount }} members</span>
                     <p>{{ listing.description }}</p>
                 </div>
             </li>
