Re-worked API controllers and added searchable&paged book list to /Community/View/

--- a/BookFriends/Views/Community/View.cshtml
+++ b/BookFriends/Views/Community/View.cshtml
@@ -14,14 +14,14 @@
 <div class="row">
     <div class="container col-lg-3">
         <h4>Members</h4>
-        <p class="text-secondary">Showing @Model.Memberships.Count of @Model.TotalMembers members </p>
+        <p class="text-secondary">Showing @Model.Members.Count() of @Model.TotalMembers members </p>
         <ul class="bf-list list-unstyled">
-            @foreach (var member in Model.Memberships)
+            @foreach (var member in Model.Members)
             {
                 <li class="media">
                     <img class="bf-thumb bf-thumb-s img-thumbnail mr-2" src="~/img/icon-person.svg" alt="icon-person" />
                     <div class="media-body">
-                        <h5>@member.User.DisplayName</h5>
+                        <h5>@member.Name</h5>
                     </div>
                 </li>
             }
@@ -30,28 +30,70 @@
             <button class="btn btn-link">View all</button>
         </div>
     </div>
-    <div class="container col-lg-9">
+    <hr />
+    <div id="browse-community-books" class="container col-lg-9">
         <div class="row">
             <div class="col">
                 <h4>Available Books</h4>
             </div>
             <div class="col text-right">
-                <button class="btn btn-success">Browse all books</button>
+                <input type="text" class="form-control" placeholder="Browse community books.." maxlength="200" v-model="searchQuery" v-on:input="onSearchInputChanged" />
             </div>
         </div>
-        <p class="text-secondary">Showing @Model.PooledBooks.Count of @Model.TotalPooledBooks books </p>
+        <p class="text-secondary">{{ statusText }}</p>
         <ul class="list-unstyled">
-            @foreach (var book in Model.PooledBooks)
-            {
-                <li class="media">
-                    <img class="bf-thumb bf-thumb-m img-thumbnail mr-3" src="~/img/icon-book.svg" alt="icon-book" />
-                    <div class="media-body">
-                        <h4 class="d-inline">@book.OwnedBook.Book.Name</h4>
-                        <p class="d-inline"><em>- @book.OwnedBook.Book.Authors.First().Author.FirstNames @book.OwnedBook.Book.Authors.First().Author.LastName</em></p>
-                        <p class="mt-2">Owned by <img src="~/img/icon-person.svg" alt="icon-person" />@book.CommunityMember.User.DisplayName</p>
-                    </div>
-                </li>
-            }
+            <li class="media" v-for="listItem in displayedListItems">
+                <img class="bf-thumb bf-thumb-m img-thumbnail mr-3" src="~/img/icon-book.svg" alt="icon-book" />
+                <div class="media-body">
+                    <h4 class="d-inline"><a v-bind:href="'/Community/Book/' + listItem.id">{{ listItem.name}}</a></h4>
+                    <p class="d-inline">
+                        <em>
+                            - {{listItem.authors[0].firstNames}} {{listItem.authors[0].lastName}}
+                        </em>
+                    </p>
+                    <p class="mt-2">Owned by <img src="~/img/icon-person.svg" alt="icon-person" />{{ listItem.owner.name}}</p>
+                </div>
+            </li>
         </ul>
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li class="page-item" v-bind:class="{ disabled: listPage === 1}">
+                    <a class="page-link" href="#" tabindex="-1" v-bind:aria-disabled="listPage === 1" v-on:click="onPrevPageClick">Previous</a>
+                </li>
+                <li class="page-item" v-if="listPage > 1">
+                    <a class="page-link" href="#" v-on:click="onGetPageClick(1)">1</a>
+                </li>
+                <li class="page-item disabled" v-if="listPage > 1">
+                    <a class="page-link" area-disabled="true">..</a>
+                </li>
+                <li class="page-item active" aria-current="page">
+                    <a class="page-link" href="#">{{ listPage }}<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="page-item disabled" v-if="listPage < totalListPages">
+                    <a class="page-link" area-disabled="true">..</a>
+                </li>
+                <li class="page-item" v-if="listPage < totalListPages">
+                    <a class="page-link" v-on:click="onGetPageClick(totalListPages)">{{ totalListPages }}</a>
+                </li>
+                <li class="page-item" v-bind:class="{ disabled: listPage === totalListPages}">
+                    <a class="page-link" href="#" v-bind:aria-disabled="listPage === totalListPages" v-on:click="onNextPageClick">
+                        Next
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/lib/vue/vue.global.prod.js"></script>
+    <script src="~/js/vm/searchable-list-component.js"></script>
+    <script>
+        const listingsVm = Vue.createApp(searchableListComponent).mount('#browse-community-books');
+        listingsVm.updateListItems(1, @Json.Serialize(Model.PooledBooks));
+        listingsVm.apiUrl = "/api/pooledbook?community=@Model.CommunityGroup.Id&";
+        listingsVm.totalListPages = @Math.Ceiling((double) Model.TotalPooledBooks / Model.BookListingsPerPage);
+        listingsVm.listPageSize = @Model.BookListingsPerPage;
+        listingsVm.changePage(1);
+    </script>
+}
