--- a/BookFriends/Views/Communities/Browse.cshtml
+++ b/BookFriends/Views/Communities/Browse.cshtml
@@ -12,17 +12,17 @@
     </div>
     <div id="browse-communities-list" class="container">
         <p class="text-secondary">
-            {{ listingsSummary }}
+            {{ statusText }}
         </p>
         <ul>
-            <li class="mt-3 mb-3 media" v-for="listing in listings">
+            <li class="mt-3 mb-3 media" v-for="listItem in displayedListItems">
                 <img class="bf-thumb bf-thumb-l img-thumbnail mr-4" src="~/img/icon-people.svg" alt="icon-people" />
                 <div class="media-body">
-                    <a v-bind:href="'/Community/View/' + listing.id">
-                        <h5>{{ listing.name }}</h5>
+                    <a v-bind:href="'/Community/View/' + listItem.id">
+                        <h5>{{ listItem.name }}</h5>
                     </a>
-                    <span class="badge badge-primary">{{ listing.memberCount }} members</span>
-                    <p>{{ listing.description }}</p>
+                    <span class="badge badge-primary">{{ listItem.memberCount }} members</span>
+                    <p>{{ listItem.description }}</p>
                 </div>
             </li>
         </ul>
@@ -33,9 +33,8 @@
         </div>
     </div>
     <div id="browse-communities-next-page-button" class="container text-center">
-        <button class="btn btn-success btn-sm" v-on:click="onNextPageClick" v-if="displayNextPageButton">View More</button>
+        <button class="btn btn-success btn-sm" v-on:click="onNextPageClick" v-if="listPage < totalListPages">View More</button>
     </div>
-
 </div>
 
 @section Scripts {
@@ -43,8 +42,11 @@
     <script src="~/js/vm/searchable-list-component.js"></script>
     <script>
         const listingsVm = Vue.createApp(searchableListComponent).mount('#browse-communities');
-        listingsVm.listings = @Json.Serialize(Model.CommunityGroupDtos);
-        listingsVm.totalListings = @Model.TotalCommunities;
-        listingsVm.listingsPerPage = @Model.ListingsPerPage;
+        listingsVm.updateListItems(1, @Json.Serialize(Model.CommunityGroups));
+        listingsVm.apiUrl = "/api/communitygroup?";
+        listingsVm.totalListPages = @Math.Ceiling((double) Model.TotalCommunityGroups / Model.ListingsPerPage);
+        listingsVm.listPageSize = @Model.ListingsPerPage;
+        listingsVm.endlessScrolling = true;
+        listingsVm.changePage(1);
     </script>
 }
